no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -207,7 +207,7 @@ VERSIONING ==>                    #go get:
 
                                              /=+===============================+=\
                                             /  :                               :  \
-                                            )==:            MODULE             :==(
+                                            )==:            GO.MOD             :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
 
@@ -234,7 +234,7 @@ module MODULE_PATH                #Enforces MODULE_PATH is referred to like this
                                   #This is in case code is hosted in several places:
                                   #  - since MODULE_PATH is used as identifier, having possible duplicates is not good
                                   #This does not declare the MODULE_PATH, since that is defined based by where code is hosted.
-package PACKAGE // import
+package PACKAGE // import         #"import comment"
  "IMPORT_PATH"                    #Same but inside source files, using code comment, for non-module-aware
 
 go VERSION                        #Declares Go version. Used to know which Go features are available at build-time (not runtime)
@@ -288,6 +288,74 @@ ENVVAR GOMOD                      #Absolute "PATH" to current go.mod.
                                   #"" if non-module-aware
                                   #"/dev/null" if none but module-aware
                                   #Read-only
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:             LIST              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+go list IMPORT_PATHS              #Prints all PACKAGEs, one per line
+
+-json                             #Prints as JSON OBJ:
+                                  #  (required)
+                                  #  Dir 'PATH': absolute path to package's DIR
+                                  #  Root 'PATH': module's root DIR
+                                  #  ImportPath 'IMPORT_PATH'
+                                  #  Name 'PACKAGE'
+                                  #  Target 'GOBIN/BINARY' or (standard library) GOROOT/pkg/GOOS_GOARCH/**/*.a
+                                  #  Match STR_ARR: CLI arguments in IMPORT_PATHS that matched it
+                                  #
+                                  #  (optional)
+                                  #  ImportComment 'IMPORT_PATH': from import comment
+                                  #  Doc STR: documentation comment
+                                  #  Shlib 'PATH': shared library when using -linkshared
+                                  #  Goroot BOOL: is in GOROOT
+                                  #  Standard BOOL: is in standard library
+                                  #  Stale BOOL: go install would do something
+                                  #  StaleReason STR: what go install would do
+                                  #  ConflictDir 'PATH': shadows another PACKAGE in GOPATH
+                                  #  BinaryOnly BOOL: binary-only PACKAGE (deprecated)
+                                  #  ForTest STR: only for use in test
+                                  #  DepOnly BOOL
+                                  #  Cgo*: CGO settings
+                                  #
+                                  #  Imports 'IMPORT_PATH'_ARR: all import statements, after resolution (e.g. due to vendor/...)
+                                  #  [X]TestImports 'IMPORT_PATH'_ARR: all import statements, after resolution in *_test.go inside|outside PACKAGE
+                                  #  ImportMap MAP[STR]STR: key|value is import statement before|after resolution
+                                  #  Deps 'IMPORT_PATH'_ARR: all dependencies, recursively
+                                  #  Export 'PATH': binary file in GOCACHE containing information about PACKAGE's exports. Requires -export flag
+                                  #
+                                  #  Module *MODULE: package's module
+                                  #  Module.Path 'MODULE_PATH'
+                                  #  Module.Dir 'PATH'
+                                  #  Module.Main BOOL
+                                  #  Module.GoMod 'PATH': of go.mod
+                                  #  Module.GoVersion 'VERSION': in go.mod
+                                  #
+                                  #  GoFiles 'PATH'_ARR: *.go, except ones below
+                                  #  [X]TestGoFiles 'PATH'_ARR: *_test.go inside|outside PACKAGE
+                                  #  CgoFiles 'PATH'_ARR: *.go importing "C"
+                                  #  CompiledGoFiles 'PATH'_ARR: *.go sent to compiled. Requires -compiled flag
+                                  #  IgnoredGoFiles 'PATH'_ARR: ignored *.go
+                                  #  CFiles 'PATH'_ARR: *.c
+                                  #  CXXFiles 'PATH'_ARR: *.cc|cxx|cpp
+                                  #  MFiles 'PATH'_ARR: *.m
+                                  #  HFiles 'PATH'_ARR: *.h|hh|hpp|hxx
+                                  #  FFiles 'PATH'_ARR: *.f|F|.for|f90
+                                  #  SFiles 'PATH'_ARR: *.s
+                                  #  SwigFiles 'PATH'_ARR: *.swig
+                                  #  SwigCXXFiles 'PATH'_ARR: *.swigcxx
+                                  #  SysoFiles 'PATH'_ARR: *.syso
+                                  #
+                                  #  Incomplete BOOL: error while loading information
+                                  #  Error *PACKAGE_ERROR: error in package
+                                  #  Error.Err 'MESSAGE'
+                                  #  Error.ImportStack 'IMPORT_PATH'_ARR: stack trace
+                                  #  Error.Pos 'FILE:LINE:COL'
+                                  #  DepsErrors *PACKAGE_ERROR_ARR: errors in dependencies
 
 
                                              /=+===============================+=\
@@ -476,9 +544,17 @@ ENVVAR GO_EXTLINK_ENABLED         #
                                              \=+===============================+=/
 
 
-go clean                          #Remove temporary files
+go clean IMPORT_PATHS             #Remove temporary files
+-i                                #Remove BINARY built with go build|test
 -cache                            #Remove GOCACHE directory
 -testcache                        #Same but only tests
+-modcache                         #Remove package downloads cache (GOPATH/pkg/mod)
+-ANY_GO_BUILD_FLAG                #
+
+-r                                #On dependencies too
+
+-x                                #Verbose
+-n                                #Dry run
 
 
                                              /=+===============================+=\
@@ -493,7 +569,7 @@ gofmt [FILE|DIR...]               #Beautify *.go files
                                   #Def: stdin
                                   #Prints to stdout
 -w                                #Modify files instead of writing to stdout
--d                                #Show diff instead of beautify
+-d                                #Show diff instead
 -l                                #List files to diff instead of beautify
 -e                                #Report all errors, instead of only first 10
 -s                                #Also refactor|simplify code, removing:
@@ -509,6 +585,34 @@ gofmt [FILE|DIR...]               #Beautify *.go files
 go fmt IMPORT_PATHS               #Runs gofmt -wl
 -n                                #Dry-run
 -x                                #Verbose
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:              FIX              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+go tool fix [DIR|FILE...]         #Migrate source files from old Go version to latest Go version
+                                  #Def PATH: stdin, and write to stdout
+                                  #Prints to stderr on any migration
+-r RULE,...                       #Def: all RULEs
+-force RULE,...                   #Force those RULEs to be applied
+-diff                             #Show diff instead
+
+go fix IMPORT_PATHS               #Higher-level command above go tool fix
+
+AVAILABLE RULES ==>               #
+context                           #import "golang.org/x/net/context" -> import "context"
+gotypes                           #import "golang.org/x/tools/go/{exact,types}" ->  import "go/{constant,types}"
+
+netipv6zone                       #In import "net", fix IPAddr|UDPAddr|TCPAddr STRUCT old definition
+printerconfig                     #In import "printer", fix Config STRUCT old definition
+
+cftype                            #Fixes initializers and casts of C.*Ref and JNI types (Go <-> C|Java)
+jni                               #Fixes initializers of JNI's jobject and subtypes (Go <-> C|Java)
+egl                               #Fixes initializers of EGLDisplay (OpenGL)
 
 
                                              /=+===============================+=\
@@ -563,13 +667,3 @@ tests                             #Common mistakes in tests
 buildtag                          #+build tags syntax errors
 asmdecl                           #Mismatch between ASM and Go
 cgocall                           #Passing a CHAN|MAP|FUNC|SLICE to C, with cgo
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:              FIX              :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-go tool fix IMPORT_PATHS          #Migrate source files to latest Go version
