no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -67,10 +67,11 @@ BINARY INSTALLATION ==>           #During go install, if main PACKAGE:
 MODULE_PATH                       #Beginning of IMPORT_PATH, to locate MODULE.
                                   #If standard library: ""
 REPO_PATH                         #End of IMPORT_PATH, to locate PACKAGE within MODULE.
-                                  #If single PACKAGE: usually ""
+                                  #If single PACKAGE: often "", i.e. top-level inside repository.
 
 VERSIONING ==>                    #Breaking change requires new IMPORT_PATH
                                   #By convention: append "/vMAJOR" to MODULE_PATH
+                                  #  - i.e. add a "/vMAJOR" source directory, and keep previous version
 
 REPOSITORY STRUCTURE ==>          #Due to how go CLI works, from repository root:
                                   #  - [REPO_PATH/]*.go: non-main PACKAGE
@@ -98,11 +99,16 @@ go.mod                            #File containing line-wise directives (below)
 module MODULE_PATH                #Declares MODULE_PATH. How this is used???
 go VERSION                        #Declares Go version
 require MODULE_PATH vX.Y.Z
-require (                         #Declares dependency
-  ...                             #Automatically added on go build
-)
+require (
+  ...                             #Declares dependency
+)                                 #Automatically added on go build
 
 go mod init "MODULE_PATH"         #Creates ./go.mod
+
+VERSION                           #Module version, by priority order:
+                                  #  - git tag [v]X-Y-Z[-...]
+                                  #  - 0.0.0-YYYYMMDDHHMMSS-XXXXXXXXXXXX
+                                  #     - last part is git commit hash
 
 go install "MODULE_PATH"          #Fetch module over the network
                                   #Retrieve VERSION
