no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -553,10 +553,13 @@ go build IMPORT_PATHS             #Compile *.go:
                                   #Goal: make the executable binary identical even on different machines
                                   #Does not modify "PATH" in source files themselves.
 
-go build -asmflags 'VAR[=VAL]...' #Pass arguments to underlying go tool asm ...
-go build -gcflags 'VAR[=VAL]...'  #Pass arguments to underlying go tool compile ...
-go build -ldflags 'VAR[=VAL]...'  #Pass arguments to underlying go tool link ...
-go build -toolexec 'PATH [ARG...]'#Use a different program than go tool asm under the hood
+go build -asmflags
+ '[IMPORT_PATHS=]ARGS'            #Pass arguments to underlying go tool asm ARGS
+go build -gcflags
+ '[IMPORT_PATHS=]ARGS'            #Pass arguments to underlying go tool compile ARGS
+go build -ldflags
+ '[IMPORT_PATHS=]ARGS'            #Pass arguments to underlying go tool link ARGS
+go build -toolexec 'PATH [ARGS]'  #Use a different program than go tool asm under the hood
 
 
                                              /=+===============================+=\
@@ -788,3 +791,13 @@ tests                             #Common mistakes in tests
 buildtag                          #+build tags syntax errors
 asmdecl                           #Mismatch between ASM and Go
 cgocall                           #Passing a CHAN|MAP|FUNC|SLICE to C, with cgo
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:              DOC              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+go doc IMPORT_PATHS[.VARR]        #Prints documentation for all|one exported variable of a PACKAGE
