no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -800,4 +800,19 @@ cgocall                           #Passing a CHAN|MAP|FUNC|SLICE to C, with cgo
                                              \=+===============================+=/
 
 
-go doc IMPORT_PATHS[.VARR]        #Prints documentation for all|one exported variable of a PACKAGE
+go doc IMPORT_PATHS[.VARR]        #Prints all|one exported variables of a PACKAGE
+                                  #For each, it also prints:
+                                  #  - type definition
+                                  #  - any comment above, providing -all CLI flag
+                                  #For whole PACKAGE, it also prints:
+                                  #  - any comment above "package PACKAGE"
+                                  #  - PACKAGE name
+                                  #  - MODULE_PATH
+                                  #Newlines in comments require an empty comment line. Otherwise folded to a space.
+-all                              #Show all variables comments
+                                  #Also separates variables by type
+-src                              #Print full source code. Only when VARR is used.
+-u                                #Also show non-exported top-level variables
+-short                            #Only print type definitions
+-cmd                              #Unless set, main PACKAGEs only shown when VARR is used
+-c                                #Unless set, VARR is case-insensitive
