no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -651,6 +651,22 @@ go build -gccgoflags STR          #
 
                                              /=+===============================+=\
                                             /  :                               :  \
+                                            )==:              RUN              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+
+go run IMPORT_PATHS [ARG...]      #Runs go build IMPORT_PATHS, then execute BINARY ARG...
+                                  #Exit code is not same as BINARY ARG...
+-exec COMMAND                     #Run COMMAND BINARY ARG... instead
+                                  #If go_GOOS_GOARCH_exec is an executable available in $PATH, is used as default value
+                                  #  - providing GOOS|GOARCH set differently to current OS|arch
+-ANY_BUILD_FLAGS                  #
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
                                             )==:             CLEAN             :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
@@ -800,19 +816,61 @@ cgocall                           #Passing a CHAN|MAP|FUNC|SLICE to C, with cgo
                                              \=+===============================+=/
 
 
-go doc IMPORT_PATHS[.VARR]        #Prints all|one exported variables of a PACKAGE
-                                  #For each, it also prints:
+go doc IMPORT_PATHS|PACKAGE[.VARR]#Prints all|one exported variables of a PACKAGE
+go doc IMPORT_PATHS|PACKAGE [VARR]#If no IMPORT_PATHS|PACKAGE: current one
+go doc VARR                       #For each, it also prints:
                                   #  - type definition
                                   #  - any comment above, providing -all CLI flag
                                   #For whole PACKAGE, it also prints:
-                                  #  - any comment above "package PACKAGE"
+                                  #  - any comment above any "package PACKAGE"
                                   #  - PACKAGE name
                                   #  - MODULE_PATH
-                                  #Newlines in comments require an empty comment line. Otherwise folded to a space.
+                                  #Format:
+                                  #  - Newlines in comments require an empty comment line. Otherwise folded to a space.
+                                  #  - Idented text is shown as code block
 -all                              #Show all variables comments
                                   #Also separates variables by type
 -src                              #Print full source code. Only when VARR is used.
--u                                #Also show non-exported top-level variables
+-u                                #Also show non-exported package-scope variables
 -short                            #Only print type definitions
 -cmd                              #Unless set, main PACKAGEs only shown when VARR is used
 -c                                #Unless set, VARR is case-insensitive
+
+RECOMMENDED DOC ==>               #Should add comments to:
+                                  #  - "package PACKAGE" to any package (only one file)
+                                  #     - should start with "Package PACKAGE ..." with a short description
+                                  #     - longer description should go after an empty comment line
+                                  #  - any exported variable
+                                  #     - should start with "VAR ..."
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:           GENERATE            :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+go generate IMPORT_PATHS          #Execute any COMMAND from //go:generate comments
+                                  #Does not remove the comment
+                                  #Exit code is any COMMAND non-0 exit code, or 0
+                                  #Goal is to modify source file
+                                  #Implies -tags=generate
+-run=REGEXP                       #Only run comments whose full content partially matches REGEXP
+-ANY_GO_BUILD_FLAG                #
+
+//go:generate COMMAND [ARGS...]   #COMMAND is not executed within a shell
+                                  #The following environment variables are added:
+                                  #  - $GOARCH, $GOOS
+                                  #  - $GOPACKAGE: PACKAGE
+                                  #  - $GOFILE: filename
+                                  #  - $GOLINE: line number
+                                  #  - $DOLLAR "$"
+                                  #Before executing the COMMAND:
+                                  #  - double quotes surrounding ARGs are removed
+                                  #  - $ENVVAR are expanded
+                                  #By convention, often at top of file
+//go:generate -command ALIAS
+ COMMAND [ARGS...]                #Means if another //go:generate uses ALIAS as COMMAND, it will be expanded to COMMAND [ARGS...]
+
+// Code generated ... DO NOT EDIT.#By convention, this comment should be before any modifications done by go generate
