--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -6,21 +6,17 @@
 
 TODO:
   - commands:
-     - https://golang.org/cmd/go, only the go * command upper part
+     - https://golang.org/cmd/go: go test
+        - https://golang.org/cmd/go/#hdr-Testing_flags
+        - https://golang.org/cmd/go/#hdr-Testing_functions
+     - https://golang.org/doc/cmd
      - https://golang.org/cmd/
         - after doing go tool asm: move doc of go build -asmflags|toolexec
         - after doing go tool compile: move doc of go build -gcflags
         - after doing go tool link: move doc of go build -ldflags
-     - https://golang.org/doc/cmd
      - all go CMD
      - all go* executable
      - https://pkg.go.dev/golang.org/x/tools
-     - after go doc:
-        - https://golang.org/doc/effective_go.html#commentary
-        - https://github.com/golang/go/wiki/Comments
-     - after go test:
-        - https://golang.org/cmd/go/#hdr-Testing_flags
-        - https://golang.org/cmd/go/#hdr-Testing_functions
      - ENVVAR GODEBUG (see go doc runtime)
      - https://github.com/golang/go/wiki/GOPATH
      - https://github.com/golang/go/wiki/PackageManagementTools
