no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -515,8 +515,7 @@ go build IMPORT_PATHS             #Compile *.go:
                                   #  - if argument is FILE.go..., first FILE name
                                   #  - if module-aware, MODULE_PATH last part
                                   #  - otherwise, DIR name
-                                  #Ignore *_test.go
-                                  #Always ignored: .*.go, _*.go, testdata/**.go
+                                  #Always ignored: *_test.go, .*.go, _*.go, testdata/**.go
 -o FILE|DIR                       #Output BINARY path
 -installsuffix STR                #Prepend STR to installation DIR name
                                   #Automatically done by:
@@ -662,7 +661,7 @@ go run IMPORT_PATHS [ARG...]      #Runs go build IMPORT_PATHS, then execute BINA
 -exec COMMAND                     #Run COMMAND BINARY ARG... instead
                                   #If go_GOOS_GOARCH_exec is an executable available in $PATH, is used as default value
                                   #  - providing GOOS|GOARCH set differently to current OS|arch
--ANY_BUILD_FLAGS                  #
+-ANY_GO_BUILD_FLAG                #
 
 
                                              /=+===============================+=\
@@ -874,3 +873,38 @@ go generate IMPORT_PATHS          #Execute any COMMAND from //go:generate commen
  COMMAND [ARGS...]                #Means if another //go:generate uses ALIAS as COMMAND, it will be expanded to COMMAND [ARGS...]
 
 // Code generated ... DO NOT EDIT.#By convention, this comment should be before any modifications done by go generate
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:             TEST              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+go test [IMPORT_PATHS] [ARG...]   #Runs:
+                                  #  - go vet
+                                  #     - only bools|nilfunc|atomic|printf|buildtag RULEs
+                                  #  - go build, but including also *_test.go
+                                  #  - executes resulting TEST_BINARY
+                                  #  - prints test summary
+                                  #     - to stdout (redirects any stderr to stdout instead)
+                                  #ARG... are passed to TEST_BINARY
+                                  #  - any go test flag can be set after IMPORT_PATHS too, so should not be any conflicts
+                                  #     - to distinguish, can prepend -args to ARG...
+                                  #TEST_BINARY includes the source BINARY
+                                  #If IMPORT_PATHS is omitted:
+                                  #  - current PACKAGE
+                                  #  - no caching
+                                  #  - imply -v
+                                  #Executing TEST_BINARY is cached
+                                  #  - if files or CLI flags changed, not cached
+                                  #  - convention to disable caching: using -count=1
+-vet=off                          #Do not run go vet
+-c                                #Do not execute TEST_BINARY
+-o PATH                           #TEST_BINARY's location.
+                                  #Def: BINARY.test
+-json                             #Prints test results as JSON
+-ANY_GO_RUN_FLAG                  #Note: -i implied -c
+
+testdata/**                       #Always ignored, i.e. good for fixtures
